[build-system]
requires = ["setuptools >= 50.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gxxtools"
version = "0.5.0"
dependencies = [
    "hpcnodes @ git+https://github.com/jbloino/hpcnodes.git",
]
requires-python = ">=3.7"
authors = [
    {name = "Julien Bloino", email = "julien.bloino@gmail.com"}
]
maintainers = [
    {name = "Julien Bloino", email = "julien.bloino@gmail.com"}
]
description = "A simple tool system to run and manage Gaussian on HPC platforms"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Gaussian", "HPC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: System :: Distributed Computing"
]

[project.scripts]
gxx_sub = "gxxtools.sub:main"

[project.urls]
Repository = "https://github.com/jbloino/gxxtools.git"

[tool.setuptools]
packages = ["gxxtools", "gxxtools.sub"]
